# companions

./: compose.yaml
backend/: Cargo.toml  Dockerfile  build.rs
backend/src/: config.rs  lib.rs  main.rs  proto.rs
backend/src/db/: init.rs  mod.rs
backend/src/service/: inner.rs  mod.rs
frontend/: Dockerfile  requirements.txt  run.py
frontend/bot/: handlers.py  inter_user_handler.py  keyboard.py  ride_handler.py  text_answers.py
frontend/rpc/: api_pb2.py  api_pb2.pyi  api_pb2_grpc.py
proto/: api.proto
